--- a/app/(root)/root.module.css
+++ b/app/(root)/root.module.css
@@ -1,11 +1,133 @@
 .root {
-  background-image: url("../../public/background.svg");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+  .background {
+    position: absolute;
+    z-index: -1;
+  }
+
+.image1,
+.image2 {
+  width: 100%;
+  height: fit-content;
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+}
+
+.image1 {
+  background: url("/background.svg");
   width: 1457.4438827737138px;
   height: 2452.6030864398163px;
-  position: absolute;
+  position: relative;
   top: 20px;
-  left: 250px;
-  z-index: -1;
+  left: 20px;
+  transform: scale(1.2);
+}
+
+.image2 {
+  background: url("/background-2.svg");
+  transform: scale(1.1);
+}
+
+.mainContainer {
+  position: relative;
+  z-index: 1;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  height: 60vh;
+  position: relative;
+  margin: 0;
+  right: 25%;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.main h1 {
+  font-weight: 700;
+  font-family: var(--montserrat);
+  color: white;
+  animation: translate 0.5s ease;
+  margin: 1.5rem 0rem;
+  font-size: 64px;
+}
+
+.textWrapper {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.main h1 span {
+  font-family: var(--montserrat);
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 100%;
+  display: block;
+  width: fit-content;
+  animation: translate 0.75s ease;
+  background: linear-gradient(90deg, #d17ac4 35%, #6298f9 65%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.main p {
+  font-family: Geist;
+  font-weight: 700;
+  color: white;
+  margin: 0px;
+  font-size: 18px;
+  display: block;
+  animation: translate 1s ease;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0px auto;
+  line-height: 1.5;
+
+  background: rgba(255, 255, 255, 0.1);
+  text-align: center;
+  max-width: 80%;
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding:1.5rem 1rem ;
+  border-radius: 50px;
+}
+
+.card p {
+  color: white;
+  font-size: larger;
+}
+
+.card button {
+  color: #a36fc3;
+  background-color: black;
+  font-family: var(--inter);
+  font-optical-sizing: auto;
+  font-size: larger;
+  font-weight: 600;
+  padding: 1rem 3rem;
+  border: none;
+  border-radius: 50px;
+}
+
+@keyframes translate {
+  from {
+    transform: translateY(100px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
