--- a/components/Features/Features.module.css
+++ b/components/Features/Features.module.css
@@ -1,13 +1,15 @@
 .section {
   background-color: #845f9d;
   border-radius: 3rem;
-  max-width: 85%;
+  max-width: 85vw;
   padding: 4rem 0rem 3.5rem 2rem;
   color: white;
   display: flex;
   gap: 2rem;
   align-items: flex-start;
   position: relative;
+  margin: 1rem auto;
+  z-index: 1;
   overflow: hidden;
   align-items: center;
 }
