--- a/app/(root)/root.module.css
+++ b/app/(root)/root.module.css
@@ -22,7 +22,7 @@
   width: 1457.4438827737138px;
   min-height: 2900px;
   position: relative;
-  top: 20px;
+  top: 80px;
   left: 20px;
   transform: scale(1.2);
 }
@@ -133,5 +133,87 @@
   }
   to {
     transform: translateY(0px);
+  }
+}
+
+@media (width<=768px) {
+  .background {
+    min-height: 280vh;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+  }
+
+  .image1 {
+    width: 180vw;
+    height: auto;
+    min-height: 160vh;
+    background-position: center top;
+    background-size: 100% auto;
+background-repeat: no-repeat;
+    background-repeat: no-repeat;
+    top: 60px;
+    left: -100px;
+    position: relative;
+    transform: rotate(-2.6deg);
+  }
+  
+  .image2 {
+    width: 120vw;
+    height: auto;
+    min-height: 100vh;
+    background-position: center top left;
+    background-size: 120% auto;
+    top: 150vh;
+    left:10vw;
+    z-index: -1;        
+}
+
+  .image1,.image2{
+    opacity: .75;
+  }
+
+  .main {
+    right: 0;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    height: 20vh;
+    margin-bottom: 4rem;
+  }
+
+  .main h1 {
+    text-wrap-mode: nowrap;
+    font-size: 2.5rem;
+  }
+
+  .main h1 span {
+    font-size: 2.5rem;
+  }
+
+  .textWrapper p {
+    text-wrap-mode: nowrap;
+    font-size: 0.6rem;
+    margin: 0 auto;
+  }
+
+  .card p {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 120%;
+    text-align: center;
+    vertical-align: middle;
+  }
+  .card {
+    padding: 0.75rem 1rem;
+    min-width: 85vw;
+    border-radius: 20px;
+    border-width: 1px;
+  }
+
+  .card button {
+    padding: 0.25rem 1.25rem;
+    border-radius: 20px;
+    font-size: small;
   }
 }
