--- a/Elements/info/info.module.css
+++ b/Elements/info/info.module.css
@@ -1,11 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-
-
 
 .container {
     width: 100%;
@@ -13,6 +5,7 @@
     display: flex;
     justify-content: center;
     padding: 1rem;
+    font-family: sans-serif;
 }
 
 .outer {
@@ -30,7 +23,7 @@
 }
 
 
-h1 {
+.heading {
     text-align: center;
     color: white;
     margin: 1rem 0;
@@ -40,7 +33,7 @@ h1 {
 .img {
     flex: 1 1 300px;
     height: 100%;
-    background-image: url("../public/image.png");
+    background-image: url("/image.png");
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -110,8 +103,10 @@ h1 {
     .img {
         aspect-ratio: 1 / 1;
         height: auto;
-        width: 50%;
+        width: 70%;
+        flex-shrink: 0;
         border-radius: 30px;
+        margin-left: 0;
     }
 
     .info {
