--- a/components/Features/Features.module.css
+++ b/components/Features/Features.module.css
@@ -48,7 +48,6 @@
   left: 4%;
 }
 .section h6 {
-
   line-height: 1.5;
   font-size: 1.2rem;
   margin: 8rem 0rem 0rem 1rem;
@@ -99,6 +98,63 @@
   font-weight: 300;
   flex-basis: 100%;
   margin: 0px;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .section {
+    min-width: 90vw;
+  }
+
+  .section h2 {
+    font-size: 2.2rem;
+  }
+
+  .section h6 {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  .box {
+    flex: 0 0 85%;
+    min-width: 230px;
+    max-width: 300px;
+    border-radius: 1.5rem;
+    padding: 1rem;
+    padding-top: 0.2rem;
+    margin-right: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0rem;
+  }
+
+  .box h3 {
+    flex: 1;
+    font-size: 1.15rem;
+    margin: 0;
+    align-self: flex-end;
+    margin-bottom: 0.25rem;
+    text-overflow: ellipsis;
+    min-width: 0;
+    order: 1;
+  }
+
+  .image {
+    width: 70px;
+    height: 70px;
+    flex: 0 0 auto;
+    margin: 0;
+    margin-left: 0.75rem;
+    order: 2;
+  }
+
+  .box p {
+    width: 100%;
+    font-size: 0.75rem;
+    line-height: 1.4;
+    margin-top: 0.5rem;
+    padding: 0;
+    order: 3;
+  }
 }
 
 @media (width<=768px) {
@@ -163,7 +219,7 @@
     max-width: 280px;
     border-radius: 1.5rem;
     padding: 1rem;
-    padding-top: .2rem;
+    padding-top: 0.2rem;
     margin-right: 1rem;
     display: flex;
     flex-wrap: wrap;
@@ -177,7 +233,7 @@
     margin: 0;
     white-space: nowrap;
     align-self: flex-end;
-    margin-bottom: .25rem;
+    margin-bottom: 0.25rem;
     text-overflow: ellipsis;
     min-width: 0;
     order: 1;
@@ -188,7 +244,7 @@
     height: 60px;
     flex: 0 0 auto;
     margin: 0;
-    margin-right: .75rem;
+    margin-right: 0.75rem;
     order: 2;
   }
 
