--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -38,6 +38,38 @@
   display: none;
 }
 
+@media (min-width: 768px) and (max-width: 1024px) {
+  .nav {
+    padding: 1rem;
+    max-width: 100vw;
+    justify-content: space-around;
+  }
+
+  .ul {
+    gap: 1rem;
+    font-size: 1rem;
+    margin: 0;
+    padding-right: 1rem;
+    margin-right: 1rem;
+  }
+
+  .button {
+    min-width: 100px;
+    height: 36px;
+    font-size: 1rem;
+  }
+
+  .menuIcon {
+    display: none;
+  }
+
+  .nav img {
+    max-width: 160px;
+    height: auto;
+  }
+}
+
+
 
 @media (max-width: 768px) {
   .nav {
