--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -32,17 +32,79 @@
   cursor: pointer;
 }
 
-
-
 .menuIcon {
   display: none;
 }
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  right: -100%;
+   background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(2px);
+  width: 55%;
+  height: 100vh;
+  color: white;
+  z-index: 1001;
+  padding: 2rem 1rem;
+  transition: right 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.sidebarUl {
+  list-style: none;
+  margin-top: 3rem;
+  padding: 0;
+}
+
+.sidebarUl li {
+  margin: 1rem 0;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  font-family: var(--Montserrat);
+}
+
+.closeIcon {
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  cursor: pointer;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  backdrop-filter: blur(2px);
+  background: rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+  transition: opacity 0.3s ease;
+}
+
+.backdrop.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.sidebar.active {
+  right: 0;
+}
+
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .nav {
     padding: 1rem;
     max-width: 100vw;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .ul {
