--- a/app/(root)/root.module.css
+++ b/app/(root)/root.module.css
@@ -14,6 +14,7 @@
   height: fit-content;
   background-size: cover;
   background-position: center;
+  z-index: -1;
   background-repeat: no-repeat;
 }
 
