correction in counter and info components

--- a/components/Slider/styles.modules.css
+++ b/components/Slider/styles.modules.css
@@ -10,7 +10,7 @@
 
 .heading {
     color: #ffffff;
-    width: 499px;
+    width: fit-content;
     /* height: 98px; */
     top: 931px;
     left: 20px;
