--- a/components/Elements/Info/Info.module.css
+++ b/components/Elements/Info/Info.module.css
@@ -1,5 +1,7 @@
-.Info{
+.Info {
     z-index: 1;
+    margin-top: 5%;
+    max-width: 100vw;
 }
 
 .container {
@@ -13,18 +15,19 @@
 
 .outer {
     width: 80%;
-   
-    background: linear-gradient(to right, rgb(71, 69, 69), rgb(54, 15, 54));
-    border-radius: 10px;
+    background: linear-gradient(135deg, rgba(0, 0, 3, 0.1), rgba(0, 0, 0, 0.2));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(15px);
+    border-radius: 20px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    border: 1px solid white;
-    padding: 1rem;
-    gap: 1rem;
+    border: 2px solid #ffffff5d;
+    padding: 1.75rem 2.5rem;
+    gap: 2rem;
     flex-wrap: wrap;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.2);
 }
-
 
 .heading {
     text-align: center;
@@ -35,48 +38,74 @@
     margin-bottom: 1.5rem;
 }
 
-
 .img {
-    flex: 1 1 300px;
-    height: 100%;
-    background-image: url("/image.png");
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    margin-left: 30px;
+    max-height: 400px;
+    width: 35%;
+    min-width: fit-content;
+    object-fit: contain;
+    border-radius: 20px;
 }
 
-
 .info {
-    flex: 1 1 300px;
+    flex: 1 1;
     color: white;
-    font-size: larger;
+    font-size: x-large;
     font-family: var(--Montserrat);
     text-align: justify;
     margin-right: 30px;
     overflow-wrap: break-word;
-    font-size: larger;
-    letter-spacing: 2px;
-    line-height: 1.4;
+    letter-spacing: 1px;
+    line-height: 1.3;
+}
+
+.info span {
+    font-weight: bold;
+    font-family: var(--Inter);
 }
 
 .button {
     display: block;
     margin: 1.5rem auto 0;
     font-size: large;
-    padding: 10px 20px;
+    padding: 1.5rem 2.75rem;
     color: white;
     background-color: black;
-    border-radius: 10px;
-    border: 3px solid rgb(105, 15, 105);
+    position: relative;
+    border: none;
+    border-radius: 20px;
+    z-index: 1;
     cursor: pointer;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
     transition: back ease.3s ease;
+}
+
+.button::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 20px;
+    padding: 2px;
+    background: linear-gradient(
+        90deg,
+        #650f9b -11.84%,
+        #9606fa 49.45%,
+        #650f9b 98.69%
+    );
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask-composite: exclude;
 }
 
 .button:hover {
     animation: back ease 1s 1 forwards;
 }
-.button i{
+.button svg {
     background: transparent;
 }
 
@@ -85,46 +114,99 @@
         background-color: black;
     }
     to {
-        background: linear-gradient(to right, rgb(150, 5, 150), rgb(244, 138, 244), rgb(147, 5, 147));
+        background: linear-gradient(
+            90deg,
+            #650f9b -0.86%,
+            #a36fc3 46.52%,
+            #650f9b 98.16%
+        );
     }
 }
 
-  
+@media (max-width: 1200px) {
+    .outer {
+        width: 90%;
+        padding: 2rem;
+    }
+}
 
 @media (max-width: 930px) {
+    .container {
+        padding: 0;
+    }
+
     .outer {
+        width: 90%;
         flex-direction: column;
         align-items: center;
-        border-radius: 30px;
-        background: linear-gradient(to bottom right, rgb(63, 60, 60), rgb(84, 40, 84));
-    }
-    
-
-    .img, .info {
-        width: 100%;
-        height: auto;
-        margin-bottom: 1rem;
+        padding: 1.5rem;
+        gap: 1.5rem;
+        margin: 0 auto;
     }
 
     .img {
-        aspect-ratio: 1 / 1;
-        height: auto;
-        width: 80%;
-        flex-shrink: 0;
-        border-radius: 30px;
-        margin-left: 0;
+        width: 70%;
+        max-height: unset;
+        min-width: unset;
+    }
+
+    .button {
+        padding: 1rem 2rem;
+        font-size: medium;
+    }
+
+    .button::before{
+        border-radius: 15px;
     }
 
     .info {
-        font-size: medium;
-        margin-right: auto;
+        width: 85%;
+        margin: 0;
+        font-size: large;
+        text-align: justify;
+        padding: 0.5rem;
+        overflow-wrap: break-word;
+        letter-spacing: 1px;
+        line-height: 1.3;
     }
-    .button{
-        border-radius: 20px;
+
+    .heading {
+        font-size: 2.5rem;
+        margin: 2rem 0;
+        padding: 0 1rem;
     }
 }
-@media(max-width: 500px){
-    .heading{
-        margin-top: 7rem;
+
+@media (max-width: 600px) {
+    .outer {
+        width: 88%;
+        padding: 0.75rem 0.5rem;
+        gap: 0rem;
+    }
+
+    .img {
+        width: 47%;
+        height: 152px;
+    }
+
+    .button {
+        padding: 0.75rem 1.5rem;
+        font-size: small;
+        gap: 0.5rem;
+    }
+
+    
+
+    .info {
+        width: 95%;
+        font-size: 10px;
+        letter-spacing: 1px;
+        line-height: 1.3;
+        text-align: justify;
+    }
+
+    .heading {
+        font-size: 2rem;
+        margin: 1.5rem 0;
     }
 }
