--- a/components/footer/Footer.module.css
+++ b/components/footer/Footer.module.css
@@ -10,7 +10,8 @@
     background-color: transparent;
     position: absolute;
     max-width: 100vw;
-    width: 100%;
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 .top{
