update footer styles

--- a/components/Elements/Info/Info.module.css
+++ b/components/Elements/Info/Info.module.css
@@ -51,6 +51,7 @@
     color: white;
     font-size: x-large;
     font-family: var(--Montserrat);
+    font-weight: 300;
     text-align: justify;
     margin-right: 30px;
     overflow-wrap: break-word;
