--- a/components/Slider/styles.modules.css
+++ b/components/Slider/styles.modules.css
@@ -1,6 +1,6 @@
 .body {
     font-family: sans-serif;
-    margin: 0 auto;
+    margin: 3rem auto 0rem;
     padding: 25px;
     max-width: 80%;
     min-width: 320px;
