--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,161 +1,162 @@
 .nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 5rem;
-  width: 100%;
-  max-width: 90vw;
-  margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 5rem;
+    width: 100%;
+    max-width: 90vw;
+    margin: 0 auto;
+    position:absolute;
 }
 
 .ul {
-  display: flex;
-  gap: 3rem;
-  font-weight: 500;
-  font-size: 1.2rem;
-  list-style: none;
-  margin-left: auto;
-  align-items: center;
+    display: flex;
+    gap: 3rem;
+    font-weight: 500;
+    font-size: 1.2rem;
+    list-style: none;
+    margin-left: auto;
+    align-items: center;
+}
+
+.ul li {
+    z-index: 2;
 }
 
 .button {
-  min-width: 115px;
-  height: 39px;
+    min-width: 115px;
+    height: 39px;
 
-  border-radius: 50px;
-  color: white;
-  background: #623280;
-  border: none;
-  font-weight: 500;
-  font-size: 1.25rem;
-  font-family: var(--inter);
-  cursor: pointer;
+    border-radius: 50px;
+    color: white;
+    background: #623280;
+    border: none;
+    font-weight: 500;
+    font-size: 1.25rem;
+    font-family: var(--inter);
+    cursor: pointer;
 }
 
 .menuIcon {
-  display: none;
+    display: none;
 }
 
 .sidebar {
-  position: fixed;
-  top: 0;
-  right: -100%;
-   background: rgba(0, 0, 0, 0.8);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(2px);
-  width: 55%;
-  height: 100vh;
-  color: white;
-  z-index: 1001;
-  padding: 2rem 1rem;
-  transition: right 0.3s ease-in-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(2px);
+    width: 55%;
+    height: 100vh;
+    color: white;
+    z-index: 1001;
+    padding: 2rem 1rem;
+    transition: right 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .sidebarUl {
-  list-style: none;
-  margin-top: 3rem;
-  padding: 0;
+    list-style: none;
+    margin-top: 3rem;
+    padding: 0;
 }
 
 .sidebarUl li {
-  margin: 1rem 0;
-  font-size: 1rem;
-  display: flex;
-  justify-content: center;
-  font-family: var(--Montserrat);
+    margin: 1rem 0;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    font-family: var(--Montserrat);
 }
 
 .closeIcon {
-  position: absolute;
-  top: 1.25rem;
-  right: 1.25rem;
-  cursor: pointer;
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+    cursor: pointer;
 }
 
 .backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  backdrop-filter: blur(2px);
-  background: rgba(0, 0, 0, 0.4);
-  opacity: 0;
-  visibility: hidden;
-  z-index: 1000;
-  transition: opacity 0.3s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    backdrop-filter: blur(2px);
+    background: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+    transition: opacity 0.3s ease;
 }
 
 .backdrop.active {
-  opacity: 1;
-  visibility: visible;
+    opacity: 1;
+    visibility: visible;
 }
 
 .sidebar.active {
-  right: 0;
+    right: 0;
 }
-
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .nav {
-    padding: 1rem;
-    max-width: 100vw;
-    justify-content: space-between;
-  }
+    .nav {
+        padding: 1rem;
+        max-width: 100vw;
+        justify-content: space-between;
+    }
 
-  .ul {
-    gap: 1rem;
-    font-size: 1rem;
-    margin: 0;
-    padding-right: 1rem;
-    margin-right: 1rem;
-  }
+    .ul {
+        gap: 1rem;
+        font-size: 1rem;
+        margin: 0;
+        padding-right: 1rem;
+        margin-right: 1rem;
+    }
 
-  .button {
-    min-width: 100px;
-    height: 36px;
-    font-size: .9rem;
-  }
+    .button {
+        min-width: 100px;
+        height: 36px;
+        font-size: 0.9rem;
+    }
 
-  .menuIcon {
-    display: none;
-  }
+    .menuIcon {
+        display: none;
+    }
 
-  .nav img {
-    max-width: 160px;
-    height: auto;
-  }
+    .nav img {
+        max-width: 160px;
+        height: auto;
+    }
 }
 
-
-
 @media (max-width: 768px) {
-  .nav {
-    box-sizing: border-box;
-    padding: .75rem 0rem .75rem 1rem; 
-    max-width: 100vw;     
-  }
+    .nav {
+        box-sizing: border-box;
+        padding: 0.75rem 0rem 0.75rem 1rem;
+        max-width: 100vw;
+    }
 
-  .ul {
-    display: none; 
-  }
+    .ul {
+        display: none;
+    }
 
-  .menuIcon {
-    position: relative;
-    right: 2rem;
-    display: block;
-    width: 30px; 
-    height: 30px;
-    cursor: pointer;
-  }
+    .menuIcon {
+        position: relative;
+        right: 2rem;
+        display: block;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
 
-
-  .nav img {
-    max-width: 140px;  
-    height: auto;
-  }
+    .nav img {
+        max-width: 140px;
+        height: auto;
+    }
 }
